day04/api/api-httproute-domain.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-v1-httproute
  namespace: day04
spec:
  parentRefs:
  - name: cfdsa-gtw
    namespace: cfdsa
    port: 80
  hostnames:
    # Test /api/data
  - v1.167.99.29.152.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier 
      responseHeaderModifier:
        add:
        - name: Access-Control-Allow-Origin
          value: '*'
        remove:
        - X-Powered-By
    backendRefs:
    - namespace: day04
      name: api-v1-svc
      port: 3000
      weight: 1
    #- namespace: day04
    #  name: api-v2-svc
    #  port: 3000
    #  weight: 1

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-v2-httproute
  namespace: day04
spec:
  parentRefs:
  - name: cfdsa-gtw
    namespace: cfdsa
    port: 80
  hostnames:
    # Test /api/data
  - v2.167.99.29.152.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - namespace: day04
      name: api-v2-svc
      port: 3000
