day04/api/api-httproute-resource.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-v1-httproute
  namespace: day04
spec:
  parentRefs:
  - name: cfdsa-gtw
    namespace: cfdsa
    port: 80
  hostnames:
    # Test /api/data
  - api.167.99.29.152.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    filters:
    - type: URLRewrite
      urlRewrite:
        path: 
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - namespace: day04
      name: api-v1-svc
      port: 3000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /v2
    filters:
    - type: URLRewrite
      urlRewrite:
        path: 
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - namespace: day04
      name: api-v2-svc
      port: 3000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - namespace: day04
      name: api-v1-svc
      port: 3000
      weight: 1
